new example with play 3d sound

--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,9 @@ dependencies = [
     dependency('alure'),
 ]
 
+cc = meson.get_compiler('c')
+m_dep = cc.find_library('m', required : false)
+
 vapi_dir = meson.current_source_dir() / 'vapi'
 add_project_arguments(['--vapidir', vapi_dir], language: 'vala')
 
@@ -14,3 +17,4 @@ executable('alureplay', 'src/alureplay.vala', dependencies: dependencies)
 executable('alurestream', 'src/alurestream.vala', dependencies: dependencies)
 executable('alurephysfs', 'src/alurephysfs.vala', dependencies: [dependencies, dependency('physfs')])
 executable('alurephysfsstream', 'src/alurephysfsstream.vala', dependencies: [dependencies, dependency('physfs')])
+executable('alurestereo', 'src/alurestereo.vala', dependencies: [dependencies, dependency('physfs'), m_dep])
