test openal play without alure (with sndfile)

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,14 @@
 project('vala app', 'vala', 'c')
 
-dependencies = [
+al_dependencies = [
     dependency('glib-2.0'),
     dependency('gobject-2.0'),
     dependency('openal'),
+    dependency('sndfile'),
+]
+
+alure_dependencies = [
+    al_dependencies,
     dependency('alure'),
 ]
 
@@ -13,8 +18,10 @@ m_dep = cc.find_library('m', required : false)
 vapi_dir = meson.current_source_dir() / 'vapi'
 add_project_arguments(['--vapidir', vapi_dir], language: 'vala')
 
-executable('alureplay', 'src/alureplay.vala', dependencies: dependencies)
-executable('alurestream', 'src/alurestream.vala', dependencies: dependencies)
-executable('alurephysfs', 'src/alurephysfs.vala', dependencies: [dependencies, dependency('physfs')])
-executable('alurephysfsstream', 'src/alurephysfsstream.vala', dependencies: [dependencies, dependency('physfs')])
-executable('alurestereo', 'src/alurestereo.vala', dependencies: [dependencies, dependency('physfs'), m_dep])
+executable('alureplay', 'src/alureplay.vala', dependencies: alure_dependencies)
+executable('alurestream', 'src/alurestream.vala', dependencies: alure_dependencies)
+executable('alurephysfs', 'src/alurephysfs.vala', dependencies: [alure_dependencies, dependency('physfs')])
+executable('alurephysfsstream', 'src/alurephysfsstream.vala', dependencies: [alure_dependencies, dependency('physfs')])
+executable('alurestereo', 'src/alurestereo.vala', dependencies: [alure_dependencies, dependency('physfs'), m_dep])
+
+executable('openalplay', 'src/openalplay.vala', dependencies: al_dependencies)
