--- a/meson.build
+++ b/meson.build
@@ -18,10 +18,11 @@ m_dep = cc.find_library('m', required : false)
 vapi_dir = meson.current_source_dir() / 'vapi'
 add_project_arguments(['--vapidir', vapi_dir], language: 'vala')
 
-executable('alureplay', 'src/alureplay.vala', dependencies: alure_dependencies)
-executable('alurestream', 'src/alurestream.vala', dependencies: alure_dependencies)
-executable('alurephysfs', 'src/alurephysfs.vala', dependencies: [alure_dependencies, dependency('physfs')])
+executable('alureplay',         'src/alureplay.vala',         dependencies: alure_dependencies)
+executable('alurestream',       'src/alurestream.vala',       dependencies: alure_dependencies)
+executable('alurephysfs',       'src/alurephysfs.vala',       dependencies: [alure_dependencies, dependency('physfs')])
 executable('alurephysfsstream', 'src/alurephysfsstream.vala', dependencies: [alure_dependencies, dependency('physfs')])
-executable('alurestereo', 'src/alurestereo.vala', dependencies: [alure_dependencies, dependency('physfs'), m_dep])
+executable('alurestereo',       'src/alurestereo.vala',       dependencies: [alure_dependencies, dependency('physfs'), m_dep])
 
-executable('openalplay', 'src/openalplay.vala', dependencies: al_dependencies)
+executable('alplay',   'src/alplay.vala',   dependencies: al_dependencies)
+executable('alstream', 'src/alstream.vala', dependencies: al_dependencies)
